--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,5 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
-users:
-    resource: '@AppBundle/Controller/UserController.php'
-    type: annotation
-    #requirements:
-     #    _method: GET
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
