--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,16 @@
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
+        "friendsofsymfony/user-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/assetic-bundle": "~2.3",
         "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "symfony/twig-bridge": "2.7.*",
+        "symfony/form": "2.7.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
