--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
         "symfony/twig-bridge": "2.7.*",
-        "symfony/form": "2.7.*"
+        "symfony/form": "2.7.*",
+        "vich/uploader-bundle": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
