--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -3,6 +3,7 @@
 parameters:
     #parameter_name: value
 
+
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -33,3 +34,6 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+  #AppBundle\Services\FileUploader:
+      #   arguments:
+          #   targetDir: '%images_dir%'
