--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,7 +7,7 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
-    images_directory: '%kernel.project_dir%/web/uploads/images'
+    images_directory: 'C:/xampp/php/MyBlog/web/uploads/images'
 
 framework:
     #esi: ~
